Name:                strave
Version:             0.1
Synopsis:            Display Workrave stats in human readable format.
Homepage:            https://github.com/dmedvinsky/strave
License:             WTFPL
License-file:        LICENSE
Author:              Dmitry Medvinsky
Maintainer:          dmedvinsky@gmail.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2


Executable strave
  Main-is:           src/main.hs
  Build-depends:     base
                   , old-locale >= 1.0
                   , filepath >= 1.2
                   , time >= 1.2
